--- a/public/index.html
+++ b/public/index.html
@@ -28,29 +28,29 @@
     href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800%7CShadows+Into+Light&display=swap"
     rel="stylesheet" type="text/css">
 
-  <!-- Vendor CSS -->
-  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
-  <link rel="stylesheet" href="vendor/animate/animate.compat.css">
-  <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
-  <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
-  <link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
+  <!-- ./vendor CSS -->
+  <link rel="stylesheet" href="./vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./vendor/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="./vendor/animate/animate.compat.css">
+  <link rel="stylesheet" href="./vendor/simple-line-icons/css/simple-line-icons.min.css">
+  <link rel="stylesheet" href="./vendor/owl.carousel/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="./vendor/owl.carousel/assets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="./vendor/magnific-popup/magnific-popup.min.css">
 
   <!-- Theme CSS -->
-  <link rel="stylesheet" href="css/theme.css">
-  <link rel="stylesheet" href="css/theme-elements.css">
-  <link rel="stylesheet" href="css/theme-blog.css">
-  <link rel="stylesheet" href="css/theme-shop.css">
+  <link rel="stylesheet" href="./css/theme.css">
+  <link rel="stylesheet" href="./css/theme-elements.css">
+  <link rel="stylesheet" href="./css/theme-blog.css">
+  <link rel="stylesheet" href="./css/theme-shop.css">
 
   <!-- Current Page CSS -->
-  <link rel="stylesheet" href="vendor/circle-flip-slideshow/css/component.css">
+  <link rel="stylesheet" href="./vendor/circle-flip-slideshow/css/component.css">
 
   <!-- Skin CSS -->
-  <link id="skinCSS" rel="stylesheet" href="css/skins/default.css">
+  <link id="skinCSS" rel="stylesheet" href="./css/skins/default.css">
 
   <!-- Theme Custom CSS -->
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="./css/custom.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
