--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Revomedia Website</title>
+  <title>Get different Flags | Everythingflag.com</title>
 </head>
 
 <body data-plugin-page-transition>
